crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_directive_definition.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "directive @auth(requires: Role!) on FIELD_DEFINITION",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        TypeSystem(
            Directive(
                DirectiveDefinition {
                    description: None,
                    name: Name(
                        "auth",
                    ),
                    arguments: [
                        InputValueDefinition {
                            description: None,
                            name: Name(
                                "requires",
                            ),
                            typ: NonNull(
                                Named(
                                    NamedType {
                                        name: "Role",
                                    },
                                ),
                            ),
                            default_value: None,
                            directives: [],
                        },
                    ],
                    repeatable: false,
                    locations: [
                        FieldDefinition,
                    ],
                },
            ),
        ),
    ],
}
