crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_enum_definition.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "enum Status { ACTIVE INACTIVE PENDING }",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        TypeSystem(
            Type(
                Enum(
                    EnumTypeDefinition {
                        description: None,
                        name: Name(
                            "Status",
                        ),
                        directives: [],
                        values: [
                            EnumValueDefinition {
                                description: None,
                                value: Name(
                                    "ACTIVE",
                                ),
                                directives: [],
                            },
                            EnumValueDefinition {
                                description: None,
                                value: Name(
                                    "INACTIVE",
                                ),
                                directives: [],
                            },
                            EnumValueDefinition {
                                description: None,
                                value: Name(
                                    "PENDING",
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
}
