crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_extend_interface.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "extend interface Node { createdAt: String }",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        TypeSystemExtension(
            Type(
                Interface(
                    InterfaceTypeExtension {
                        name: Name(
                            "Node",
                        ),
                        implements: [],
                        directives: [],
                        fields: [
                            FieldDefinition {
                                description: None,
                                name: Name(
                                    "createdAt",
                                ),
                                arguments: [],
                                typ: Named(
                                    NamedType {
                                        name: "String",
                                    },
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
}
