crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_extend_type.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "extend type User { avatar: String }",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        TypeSystemExtension(
            Type(
                Object(
                    ObjectTypeExtension {
                        name: Name(
                            "User",
                        ),
                        implements: [],
                        directives: [],
                        fields: [
                            FieldDefinition {
                                description: None,
                                name: Name(
                                    "avatar",
                                ),
                                arguments: [],
                                typ: Named(
                                    NamedType {
                                        name: "String",
                                    },
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
}
