crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_field_with_arguments.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "type Query { users(first: Int, offset: Int): [User] }",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        TypeSystem(
            Type(
                Object(
                    ObjectTypeDefinition {
                        description: None,
                        name: Name(
                            "Query",
                        ),
                        implements: [],
                        directives: [],
                        fields: [
                            FieldDefinition {
                                description: None,
                                name: Name(
                                    "users",
                                ),
                                arguments: [
                                    InputValueDefinition {
                                        description: None,
                                        name: Name(
                                            "first",
                                        ),
                                        typ: Named(
                                            NamedType {
                                                name: "Int",
                                            },
                                        ),
                                        default_value: None,
                                        directives: [],
                                    },
                                    InputValueDefinition {
                                        description: None,
                                        name: Name(
                                            "offset",
                                        ),
                                        typ: Named(
                                            NamedType {
                                                name: "Int",
                                            },
                                        ),
                                        default_value: None,
                                        directives: [],
                                    },
                                ],
                                typ: List(
                                    Named(
                                        NamedType {
                                            name: "User",
                                        },
                                    ),
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
}
