crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_fragment.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "fragment UserFields on User { id name email }",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        Executable(
            Fragment(
                FragmentDefinition {
                    span: Span {
                        start: 0,
                        end: 45,
                    },
                    name: Name(
                        "UserFields",
                    ),
                    type_condition: Name(
                        "User",
                    ),
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 30,
                                        end: 37,
                                    },
                                    alias: None,
                                    name: Name(
                                        "id",
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                            Field(
                                Field {
                                    span: Span {
                                        start: 33,
                                        end: 43,
                                    },
                                    alias: None,
                                    name: Name(
                                        "name",
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                            Field(
                                Field {
                                    span: Span {
                                        start: 38,
                                        end: 45,
                                    },
                                    alias: None,
                                    name: Name(
                                        "email",
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
