crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_input_with_default_values.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "input UserInput { name: String! age: Int = 18 }",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        TypeSystem(
            Type(
                InputObject(
                    InputObjectTypeDefinition {
                        description: None,
                        name: Name(
                            "UserInput",
                        ),
                        directives: [],
                        fields: [
                            InputValueDefinition {
                                description: None,
                                name: Name(
                                    "name",
                                ),
                                typ: NonNull(
                                    Named(
                                        NamedType {
                                            name: "String",
                                        },
                                    ),
                                ),
                                default_value: None,
                                directives: [],
                            },
                            InputValueDefinition {
                                description: None,
                                name: Name(
                                    "age",
                                ),
                                typ: Named(
                                    NamedType {
                                        name: "Int",
                                    },
                                ),
                                default_value: Some(
                                    Int(
                                        "18",
                                    ),
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
}
